<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="17dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textViewApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/textView3Artist"
        android:text="@string/TVApp" />

    <TextView
        android:id="@+id/textView3Artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="15dp"
        android:text="@string/TVartist" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3Artist"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="56dp"
        android:text="@string/TVDate" />

    <TextView
        android:id="@+id/textViewGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3Artist"
        android:layout_below="@+id/textView3Artist"
        android:layout_marginTop="14dp"
        android:text="@string/TVGenreArray" />
</RelativeLayout>